Added  another paragraph in About Me

--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
             <p>
                 I am a third year Computer Science student at the University of Witwatersrand. My interests are mostly anime and movies.
             </p>
+            <p>
+                I also have have an interest in gaming and so far the game that I like is Forza horizon 5.
+            </p>
         </section>
 
         <article>
