improved some content

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
             <h2>About Me</h2>
             <p>
                 I am a third year Computer Science student at the University of Witwatersrand. My interests are mostly anime and movies.
+                I am a motivated and curious learner with a strong interest in technology and problem-solving. I enjoy exploring how systems work, building my skills step by step, and challenging myself with new  concepts.
             </p>
             <p>
                 I also have have an interest in gaming and so far the game that I like is Forza horizon 5.
